style: использовать класс StringUtils и ConcurrentHashMap